# aidevs4-agent

./: .gitignore  ARCHITECTURE.md  README.md  project_architecture.md  pyproject.toml  requirements.txt
cache/: domatowo_B3.json  domatowo_map.json  evaluation_recheck.json  failure_crit.json  failure_exc.json  locations_Cezary_Żurek.json  locations_Jacek_Nowak.json  locations_Oskar_Sieradzki.json  locations_Wacław_Jasiński.json  locations_Wojciech_Bielik.json  log_clean.json  mailbox_inbox.json  power_plants_coordinates.json  windpower_config_response.json  windpower_configs_with_unlock.json  windpower_documentation.json  windpower_done_response.json  windpower_final_turbinecheck.json  windpower_powerplantcheck.json  windpower_turbinecheck.json  windpower_weather.json
cache/s03e04_csv/: items.csv
outputs/: ans_1-people.json  ans_1-people_1.json  ans_2-findhim.json  ans_distances.json  ans_drone.json  ans_electricity.json  ans_failure.json  ans_firmware.json  ans_locations.json  ans_plants_with_coords.json  ans_railway.json  ans_task_09_mailbox.json  ans_task_11_evaluation.json  ans_task_12_firmware.json
outputs/task_09_mailbox/: final_answer_payload.json  inbox_items.json  messages_collected.json  verify_response.json
sessions/: chat-3c50e4c030a4a4ee9cfde30414b8143a.json  proxy-test-001.json  test-1.json
src/: config.py
src/agent/: agent.py  models.py  runner.py  state.py  types.py
src/cli/: main.py
src/llm/: client.py  hub_client.py  shell_client.py  zmail_client.py
src/scripts/: task_01_people.py  task_02_findhim.py  task_03_registry.py  (+15 more)
(+22 files in other folders)
